--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>JavaScript Quiz App</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/background.css" />
   </head>
   <body>
     <div class="container">
@@ -15,6 +16,35 @@
         <button id="showAnswer" class="button hide">Show Answer</button>
       </div>
     </div>
+    <div class="gradient-bg">
+      <svg xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <filter id="goo">
+            <feGaussianBlur
+              in="SourceGraphic"
+              stdDeviation="10"
+              result="blur"
+            />
+            <feColorMatrix
+              in="blur"
+              mode="matrix"
+              values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8"
+              result="goo"
+            />
+            <feBlend in="SourceGraphic" in2="goo" />
+          </filter>
+        </defs>
+      </svg>
+      <div class="gradient-container">
+        <div class="g1"></div>
+        <div class="g2"></div>
+        <div class="g3"></div>
+        <div class="g4"></div>
+        <div class="g5"></div>
+        <div class="interactive"></div>
+      </div>
+    </div>
     <script src="./assets/scripts/script.js" type="module"></script>
+    <script src="./assets/scripts/background.js"></script>
   </body>
 </html>
